--- a/src/components/Jumbotron/Jumbotron.css
+++ b/src/components/Jumbotron/Jumbotron.css
@@ -7,6 +7,7 @@
     margin-bottom: 10px;
     background-color: lightgray; 
     clear: "both";
+    background-image: url("/images/headerbg.jpeg");
     z-index: 99;
   }
   
